--- a/views/lobby.html
+++ b/views/lobby.html
@@ -1,9 +1,8 @@
 <h4>Instructions</h4>
 <ul>
   <li>Enter your name at the top.</li>
-  <li>You need 4 players to play.</li>
-  <li>Use the Create Game link at the top to start a game or...</li>
-  <li>click below to join a game.</li>
+  <li>Use the Create Game link at the top to start a game.</li>
+  <li>Click below to join a game.</li>
 </ul>
 <hr />
 <div class="row" id="availableGames" >
@@ -11,7 +10,7 @@
     <strong id="noGames" ng-show="availableGames.length == 0">no open games... use the Create Game link at the top to start one.</strong>
     <div ng-repeat="game in availableGames" class="well">
       <button ng-click="joinGame(game.id)" type="button" class="btn btn-primary" style="margin-right: 10px;">Join Game</button>
-      <span style="font-size: larger">{{game.name}} - {{game.players}} of 4 players</span>
+      <span style="font-size: larger">{{game.name}} - {{game.players}} players</span>
     </div>
   </div>
 </div>
