--- a/views/lobby.html
+++ b/views/lobby.html
@@ -1,13 +1,18 @@
 <h4>Instructions</h4>
 <ul>
-  <li>Enter your name at the top.</li>
+  <li><form ng-show="inLobby" class="ng-pristine ng-valid" role="search">
+    <div class="form-group">
+      <label for="nameInput">Choose a Name</label><input type="text" id="nameInput" class="form-control ng-pristine ng-valid" placeholder="Enter name" ng-model="gameSvc.playerName">
+    </div>
+  </form></li>
   <li>Use the Create Game link at the top to start a game.</li>
   <li>Click below to join a game.</li>
+  <li>Or <a href="" ng-click="createGame()">start a new game</a>.</li>
 </ul>
 <hr />
 <div class="row" id="availableGames" >
   <div class="col-lg-10">
-    <strong id="noGames" ng-show="availableGames.length == 0">no open games... use the Create Game link at the top to start one.</strong>
+    <strong id="noGames" ng-show="availableGames.length == 0">No active games. <a href="" ng-click="createGame()">Start a new game.</a></strong>
     <div ng-repeat="game in availableGames" class="well">
       <button ng-click="joinGame(game.id)" type="button" class="btn btn-primary" style="margin-right: 10px;">Join Game</button>
       <span style="font-size: larger">{{game.name}} - {{game.players}} players</span>
