--- a/views/index.html
+++ b/views/index.html
@@ -3,25 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>NodeJS Against Humanity</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Le styles -->
     <link href="/public/css/bootstrap.min.css" rel="stylesheet">
     <link href="/public/css/appStyles.css" rel="stylesheet">
-    <style>
-      body { padding-top: 60px; }
-    </style>
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#humanity-navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">NodeJS Against Humanity</a>
-    </div>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Château Gaming Against Humanity</a>
+        </div>
+      </div>
     </nav>
     <div class="container">
       <div style="margin-left: 15px; margin-right: 15px;" ng-view></div>
@@ -39,8 +32,7 @@
           <br />
           <small>This site is not affliated in any way with the official Cards Against Humanities.</small>
           <br/>
-          <a href="https://github.com/amirrajan/nodejs-against-humanity">The source is here. I accept pull requests (tech: NodeJS, AngularJS)</a>.
-          <div>Last Release:&nbsp;<span app-version></span></div>
+          <small><a href="https://github.com/chrisfried/nodejs-against-humanity" target="_blank">Source</a>, forked from <a href="https://github.com/amirrajan/nodejs-against-humanity" target="_blank">amirrajan</a>.
         </div>
       </div>
     </div>
