--- a/views/game.html
+++ b/views/game.html
@@ -67,7 +67,7 @@
     <div id="roundHistory" class="">
       <ul class="list-group">
         <li class="list-group-item" ng-repeat="player in game.players">
-          <span class="label label-as-badge pull-right" ng-class="'label' + getPlayerStatusClass(player)">{{player.awesomePoints}} | {{getPlayerStatus(player)}}</span>
+          <span class="label label-as-badge pull-right" ng-class="'label-' + getPlayerStatusClass(player)">{{player.awesomePoints}} | {{getPlayerStatus(player)}}</span>
           {{player.name}}
         </li>
       </ul>
