Customized title tag.

--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp" ng-controller="HomeCtrl">
   <head>
     <meta charset="utf-8">
-    <title>NodeJS Against Humanity</title>
+    <title>Château Gaming Against Humanity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Le styles -->
     <link href="/public/css/bootstrap.min.css" rel="stylesheet">
