--- a/views/game.html
+++ b/views/game.html
@@ -73,7 +73,7 @@
       </ul>
     </div>
     <h4>Round Winners</h4>
-    <div id="rountWinners" class="">
+    <div id="roundWinners" class="">
       <ul class="list-group">
         <li class="list-group-item" ng-repeat="item in game.history">
         <span class="text-success">{{item.winner}}:&nbsp;</span>
