--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Château Gaming Against Humanity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="apple-touch-icon" href="/public/img/touch-icon-60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/public/img/touch-icon-76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/public/img/touch-icon-120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/public/img/touch-icon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/img/touch-icon-180.png">
     <!-- Le styles -->
     <link href="/public/css/bootstrap.min.css" rel="stylesheet">
     <link href="/public/css/appStyles.css" rel="stylesheet">
