--- a/views/game.html
+++ b/views/game.html
@@ -1,85 +1,91 @@
-<div class="" ng-show="!!gameError">
-  <div class="alert alert-danger">
-    {{gameError}}
-  </div>
-</div>
-<div class="row">
-  <h1 id="gameName">{{game.name}} <small ng-show="!game.isStarted">(waiting for players)</small></h1>
-  <hr/>
-</div>
-<div class="row">
-  <div class="col-sm-9">
-    <div id="notificationWaitingOnRound" ng-show="!game.isStarted" class="center  alert alert-warning">waiting on round to start</div>
-    <div class="blackCard" ng-show="game.isStarted">
-      {{game.currentBlackCard}}
-    </div>
-    <br>
-    <div id="notificationCardCzar" ng-show="currentPlayer.isCzar" class=" alert alert-info center">You are the Card Czar.</div>
-    <div id="notificationSelectCard" ng-show="showNotificationSelectCard()" class=" alert alert-success center">Select a card to play.</div>
-    <div id="notificationWaitingOnCzar" ng-show="showNotificationWaitingOnCzar()" class=" alert alert-warning center">Waiting for the Card Czar to pick winner.</div>
-    <div id="notificationWaitingOnCards" ng-show="showNotificationWaitingOnCards()" class=" alert alert-warning center">Waiting for other players.</div>
-    <div id="notificationSelectWinner" ng-show="showNotificationSelectWinner()" class=" alert alert-success center">Select a card to be the winner.</div>
-    <div class="" ng-show="showWhiteCardList()">
-      <table id="whiteCards" class="table">
-        <tbody id="whiteCardSelection">
-          <tr ng-repeat="whiteCard in currentPlayer.cards">
-            <td>
-              <button class="btn btn-default" ng-class="getButtonClass(whiteCard)" ng-click="selectCard(whiteCard)">{{getButtonText(whiteCard)}}</button>
-            </td>
-            <td class="col-lg-10 col-md-10" style="font-size: 16px; font-weight: bold; line-height: 25px;">{{whiteCard}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="" ng-show="showSelectedWhiteCardList()">
-      <table id="selectedWhiteCards" class="table">
-        <tbody>
-          <tr ng-repeat="player in game.players | filter:whiteCardNonNull" ng-class="getWinningCardClass(player.selectedWhiteCardId)">
-            <td>
-              <button class="btn btn-default" ng-show="!game.isReadyForReview" ng-click="selectWinner(player.selectedWhiteCardId)">select</button>
-              <span ng-show="game.isReadyForReview">{{player.name}}</span>
-            </td>
-            <td class="col-lg-10 col-md-10" style="font-size: 16px; font-weight: bold; line-height: 25px;"><span ng-show="game.winningCardId === player.selectedWhiteCardId">Winner: &nbsp;</span>{{player.selectedWhiteCardId}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div id="notificationRoundComplete" ng-show="game.isReadyForReview" class=" alert alert-info center">winner selected, next round will start when everyone is ready</div>
-    <div id="buttonNextRound" ng-show="game.isReadyForReview && !currentPlayer.isReady" class="">
-      <button ng-click="readyForNextRound()" ng-show="!game.isOver" class="btn btn-lg btn-primary btn-block">ready</button>
-      <button ng-click="readyForNextRound()" ng-show="game.isOver" class="btn btn-lg btn-primary btn-block">start new game</button>
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">câh</a><p class="navbar-text">{{game.name}}</p>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div class="">
-      <h4>Round Progress</h4>
-      <div class="progress">
-        <div id="gameProgress" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" ng-style="progStyle">
-        </div>
+</nav>
+
+<div class="container">
+  <div class="" ng-show="!!gameError">
+    <div class="alert alert-danger">
+      {{gameError}}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-9">
+      <div id="notificationWaitingOnRound" ng-show="!game.isStarted" class="center  alert alert-warning">Waiting for players...</div>
+      <div class="blackCard" ng-show="game.isStarted">
+        {{game.currentBlackCard}}
       </div>
-      <table id="roundSummary" class="table">
-        <tbody id="roundSummaryEntries">
-        </tbody>
-      </table>
+      <br>
+      <div id="notificationCardCzar" ng-show="currentPlayer.isCzar" class=" alert alert-info center">You are the Card Czar.</div>
+      <div id="notificationSelectCard" ng-show="showNotificationSelectCard()" class=" alert alert-success center">Select a card to play.</div>
+      <div id="notificationWaitingOnCzar" ng-show="showNotificationWaitingOnCzar()" class=" alert alert-warning center">Waiting for the Card Czar to pick winner.</div>
+      <div id="notificationWaitingOnCards" ng-show="showNotificationWaitingOnCards()" class=" alert alert-warning center">Waiting for other players.</div>
+      <div id="notificationSelectWinner" ng-show="showNotificationSelectWinner()" class=" alert alert-success center">Select a card to be the winner.</div>
+      <div class="" ng-show="showWhiteCardList()">
+        <table id="whiteCards" class="table">
+          <tbody id="whiteCardSelection">
+            <tr ng-repeat="whiteCard in currentPlayer.cards">
+              <td>
+                <button class="btn btn-default" ng-class="getButtonClass(whiteCard)" ng-click="selectCard(whiteCard)">{{getButtonText(whiteCard)}}</button>
+              </td>
+              <td class="col-lg-10 col-md-10" style="font-size: 16px; font-weight: bold; line-height: 25px;">{{whiteCard}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="" ng-show="showSelectedWhiteCardList()">
+        <table id="selectedWhiteCards" class="table">
+          <tbody>
+            <tr ng-repeat="player in game.players | filter:whiteCardNonNull" ng-class="getWinningCardClass(player.selectedWhiteCardId)">
+              <td>
+                <button class="btn btn-default" ng-show="!game.isReadyForReview" ng-click="selectWinner(player.selectedWhiteCardId)">select</button>
+                <span ng-show="game.isReadyForReview">{{player.name}}</span>
+              </td>
+              <td class="col-lg-10 col-md-10" style="font-size: 16px; font-weight: bold; line-height: 25px;"><span ng-show="game.winningCardId === player.selectedWhiteCardId">Winner: &nbsp;</span>{{player.selectedWhiteCardId}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div id="notificationRoundComplete" ng-show="game.isReadyForReview" class=" alert alert-info center">winner selected, next round will start when everyone is ready</div>
+      <div id="buttonNextRound" ng-show="game.isReadyForReview && !currentPlayer.isReady" class="">
+        <button ng-click="readyForNextRound()" ng-show="!game.isOver" class="btn btn-lg btn-primary btn-block">ready</button>
+        <button ng-click="readyForNextRound()" ng-show="game.isOver" class="btn btn-lg btn-primary btn-block">start new game</button>
+      </div>
     </div>
-    <div id="roundPlayers" class=""> </div>
-    <h4>Player Status</h4>
-    <div id="roundHistory" class="">
-      <ul class="list-group">
-        <li class="list-group-item" ng-repeat="player in game.players">
-          <span class="label label-as-badge pull-right" ng-class="'label-' + getPlayerStatusClass(player)">{{player.awesomePoints}} | {{getPlayerStatus(player)}}</span>
-          {{player.name}}
-        </li>
-      </ul>
-    </div>
-    <h4>Round Winners</h4>
-    <div id="roundWinners" class="">
-      <ul class="list-group">
-        <li class="list-group-item" ng-repeat="item in game.history">
-        <span class="text-success">{{item.winner}}:&nbsp;</span>
-        <span ng-bind-html="buildWinningText(item)"></span>
-        </li>
-      </ul>
+    <div class="col-sm-3">
+      <div class="">
+        <h4>Round Progress</h4>
+        <div class="progress">
+          <div id="gameProgress" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" ng-style="progStyle">
+          </div>
+        </div>
+        <table id="roundSummary" class="table">
+          <tbody id="roundSummaryEntries">
+          </tbody>
+        </table>
+      </div>
+      <div id="roundPlayers" class=""> </div>
+      <h4>Player Status</h4>
+      <div id="roundHistory" class="">
+        <ul class="list-group">
+          <li class="list-group-item" ng-repeat="player in game.players">
+            <span class="label label-as-badge pull-right" ng-class="'label-' + getPlayerStatusClass(player)">{{player.awesomePoints}} | {{getPlayerStatus(player)}}</span>
+            {{player.name}}
+          </li>
+        </ul>
+      </div>
+      <h4>Round Winners</h4>
+      <div id="roundWinners" class="">
+        <ul class="list-group">
+          <li class="list-group-item" ng-repeat="item in game.history">
+          <span class="text-success">{{item.winner}}:&nbsp;</span>
+          <span ng-bind-html="buildWinningText(item)"></span>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
+</container>
