--- a/views/index.html
+++ b/views/index.html
@@ -14,16 +14,9 @@
     <link href="/public/css/appStyles.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">Château Gaming Against Humanity</a>
-        </div>
-      </div>
-    </nav>
-    <div class="container">
-      <div style="margin-left: 15px; margin-right: 15px;" ng-view></div>
+    <div ng-view></div>
 
+    <div class="container">
       <br/>
       <br/>
       <br/>
