--- a/views/lobby.html
+++ b/views/lobby.html
@@ -29,18 +29,22 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="row" style="border: solid 1px silver; padding: 10px; margin: 10px;">
+<div class="container license">
+    <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 well">
+      <div class="row">
     <div class="col-sm-2">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/">
-        <img alt="Creative Commons License" style="display: block; margin-left: auto; margin-right: auto;" src="http://i.creativecommons.org/l/by-nc-sa/2.0/88x31.png" /></a>
-      </div>
-      <div class="col-sm-10">
-        <small>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/">Creative Commons Attribution-NonCommercial-ShareAlike 2.0 Generic License</a>.</small>
-        <br />
-        <small>This site is not affliated in any way with the official Cards Against Humanities.</small>
-        <br/>
-        <small><a href="https://github.com/chrisfried/nodejs-against-humanity" target="_blank">Source</a>, forked from <a href="https://github.com/amirrajan/nodejs-against-humanity" target="_blank">amirrajan</a>.
-        </div>
-      </div>
+        <img alt="Creative Commons License" style="display: block; margin-left: auto; margin-right: auto;" src="http://i.creativecommons.org/l/by-nc-sa/2.0/88x31.png" />
+      </a>
     </div>
+    <div class="col-sm-10">
+      <small>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/">Creative Commons Attribution-NonCommercial-ShareAlike 2.0 Generic License</a>.</small>
+      <br />
+      <small>This site is not affliated in any way with the official Cards Against Humanities.</small>
+      <br/>
+      <small><a href="https://github.com/chrisfried/nodejs-against-humanity" target="_blank">Source</a>, forked from <a href="https://github.com/amirrajan/nodejs-against-humanity" target="_blank">amirrajan</a>.
+    </div>
+  </div>
+</div>
+  </div>
+</div>
