Need a better name.

--- a/views/lobby.html
+++ b/views/lobby.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">câh</a><p class="navbar-text">Château Gaming Against Humanity</p>
+      <a class="navbar-brand" href="/">câh</a><p class="navbar-text">a-circumflex for horrible people.</p>
     </div>
   </div>
 </nav>
@@ -38,9 +38,9 @@
       </a>
     </div>
     <div class="col-sm-10">
-      <small>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/">Creative Commons Attribution-NonCommercial-ShareAlike 2.0 Generic License</a>.</small>
+      <small>câh is available under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/">Creative Commons BY-NC-SA 2.0 license</a>.</small>
       <br />
-      <small>This site is not affliated in any way with the official Cards Against Humanities.</small>
+      <small>This site is not affliated in any way with <a href="http://cardsagainsthumanity.com/" target="_blank">Cards Against Humanity</a>.</small>
       <br/>
       <small><a href="https://github.com/chrisfried/nodejs-against-humanity" target="_blank">Source</a>, forked from <a href="https://github.com/amirrajan/nodejs-against-humanity" target="_blank">amirrajan</a>.
     </div>
