--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp" ng-controller="HomeCtrl">
   <head>
     <meta charset="utf-8">
-    <title>Château Gaming Against Humanity</title>
+    <title>câh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="apple-touch-icon" href="/public/img/touch-icon-60.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/public/img/touch-icon-76.png">
@@ -14,7 +14,7 @@
     <link href="/public/css/appStyles.css" rel="stylesheet">
   </head>
   <body>
-    
+
     <div ng-view></div>
 
     <!-- In production use:
