--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>câh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="icon" type="image/x-icon" href="/public/img/favicon.ico" />
     <link rel="apple-touch-icon" href="/public/img/touch-icon-60.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/public/img/touch-icon-76.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/public/img/touch-icon-120.png">
