--- a/views/game.html
+++ b/views/game.html
@@ -86,7 +86,7 @@
           </li>
         </ul>
       </div>
-      <h4 ng-show="game.hangout"><a class="label label-success" ng-href="https://plus.google.com/hangouts/_/{{game.hangout}}" target="_blank">Launch Google Hangout</a></h4>
+      <h4 ng-show="game.hangout"><a class="label label-success" ng-href="https://plus.google.com/hangouts/_/{{game.hangout}}" target="_blank">Join Google Hangout</a></h4>
     </div>
   </div>
 </container>
