--- a/public/css/appStyles.css
+++ b/public/css/appStyles.css
@@ -4,9 +4,32 @@
   line-height: 25px;
   color: #FFFFFF;
   background-color: #2c2c2c;
-  padding: 20px;
-  text-align: center;
+  padding: 1em;
   border-radius: 5px;
+}
+
+.whiteCard {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 25px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  padding: .5em 1em;
+  margin-bottom: .5em;
+}
+
+.whiteCardSelect {
+  cursor: pointer;
+}
+
+.whiteCardSelect:hover {
+  box-shadow: 1px 1px 3px #888;
+}
+
+.table>tbody>tr>td {
+  border: none;
+  vertical-align: middle;
+  padding: 0 .5em .5em 0;
 }
 
 .test1 {background-color: #269abc;}
