--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
     <title>câh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" type="image/x-icon" href="/public/img/favicon.ico" />
     <link rel="apple-touch-icon" href="/public/img/touch-icon-60.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/public/img/touch-icon-76.png">
